--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -200,10 +200,10 @@
     new Chart(ctx2, {
         type: 'bar',
         data: {
-            labels: map.keys(),
+            labels: Object.keys(map),
             datasets: [{
                 label: '만족도 평균 하위 Top5',
-                data: map.values(),
+                data: Object.values(map),
                 borderWidth: 1
             }]
         },
