--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -45,7 +45,7 @@
                                     <i class="fa-solid fa-user-check fs-4 pt-2 me-5" style="color:white;"></i>
                                 </div>
                                 <div class="col">
-                                    <span class="fs-4 ms-3 nodeHeader">일일 접속자 수</span>
+                                    <span class="fs-4 ms-3 nodeHeader">일일 계정 삭제 수</span>
                                 </div>
                             </div>
                             <hr>
@@ -69,12 +69,12 @@
                         </div>
                         <div class="row w-75">
                             <div class="shadow p-3 mt-1 text-start rounded" style="background-color: white;">
-                                <p class="fs-4 nodeHeader">일일 접속자수</p>
+                                <p class="fs-4 nodeHeader">계정 탈퇴자 수</p>
                                 <hr>
                                 <div class="row">
                                     <div class="col-2 fs-1 ms-3 ps-3 me-0 pe-0 rounded" style="background-color: rgb(110, 231, 183);"><i class="fa-solid fa-percent" style="color : white;"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        <span th:text="${userLoginCnt}">45</span><span class="fs-4" style="color:rgb(203, 213, 225)">명</span>
+                                        <span th:text="${userDeleteCnt}">45</span><span class="fs-4" style="color:rgb(203, 213, 225)">명</span>
                                     </div>
                                 </div>
                             </div>
@@ -200,7 +200,6 @@
     // 날짜 배열 출력
     console.log(dateArray);
     let userSignUpCount = [[${userSignUpCount}]];
-    let userDeleteCnt = [[${userDeleteCnt}]];
     let userLoginCnt = [[${userLoginCnt}]];
 
     const ctx1 = document.getElementById('myChart1');
@@ -208,10 +207,10 @@
     new Chart(ctx1, {
         type: 'line',
         data: {
-            labels: dateArray.reverse(),
+            labels: Object.keys(userSignUpCount),
             datasets: [{
                 label: '신규 가입자 수',
-                data: userSignUpCount,
+                data: Object.values(userSignUpCount),
                 borderWidth: 1
             }]
         },
@@ -229,10 +228,10 @@
     new Chart(ctx2, {
         type: 'line',
         data: {
-            labels: dateArray,
+            labels: Object.keys(userLoginCnt),
             datasets: [{
                 label: '계정 삭제 유저 수',
-                data: userDeleteCnt,
+                data: Object.values(userLoginCnt),
                 borderWidth: 1
             }]
         },
