--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -73,7 +73,6 @@
                             지점목록
                         </div>
                         <div class="row bg-white">
-                            <!--
                             <div class="col-5 align-items-center">
                                 <div class="row mt-2">
                                     <div class="col pe-0" style="position : relative">
@@ -82,7 +81,6 @@
                                     </div>
                                 </div>
                             </div>
-                            -->
                             <div class="col-3 offset-9 align-items-end text-end">
                                 <a href="/admin/node/add" th:href="@{/admin/node/add}" class="mt-3 btn btn-primary add">지점 추가</a>
                             </div>
@@ -231,7 +229,7 @@
 
     function searchConnect(){
         let wordBox = document.getElementById("word");
-        window.self.location.href = 'http://localhost:60002/admin/node/search/' + wordBox.value;
+        window.self.location.href = 'http://ceprj.gachon.ac.kr:60002/admin/node/search/' + wordBox.value;
     }
 </script>
 <script th:inline="javascript">
