--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -229,7 +229,7 @@
 
     function searchConnect(){
         let wordBox = document.getElementById("word");
-        window.self.location.href = 'http://ceprj.gachon.ac.kr:60002/admin/node/search/' + wordBox.value;
+        window.self.location.href = 'http://ceprj.gachon.ac.kr:60002/admin/node/' + wordBox.value + '/0';
     }
 </script>
 <script th:inline="javascript">
