인기노드 및 일일 로그인 접속 수 반영 - 수정

--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -119,7 +119,7 @@
                                         <div class="col">
                                             <div class="card-title fs-5 noto-sans-100">일일 접속자 수</div>
                                             <div>
-                                                <span class="card-text noto-sans-400 fs-3"><span th:text="${userTodaySignUpCount}">2320</span>명</span>
+                                                <span class="card-text noto-sans-400 fs-3"><span th:text="${loginRequest}">2320</span>명</span>
                                             </div>
                                         </div>
                                         <div class="col-3 pt-3">
@@ -137,7 +137,6 @@
                                             <div class="card-title fs-5 noto-sans-100">일일 요청 수</div>
                                             <div>
                                                 <span class="card-text noto-sans-400 fs-3"><span th:text="${requestTodayCount}">3210</span>건</span>
-                                                <span class="card-text text-warning fs-5 ms-4">+31%</span>
                                             </div>
                                         </div>
                                         <div class="col-3 pt-3">
