인기노드 및 일일 로그인 접속 수 반영 - 수정 2

--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -245,7 +245,8 @@
     const ctx1 = document.getElementById('myChart1');
 
     let popularNodes = [[${top5Nodes}]];
-    alert(popularNodes);
+    let pathRequest = [[${pathRequest}]];
+    alert(pathRequest);
 
     const data1 = {
         labels: ['3월 8일', '3월 9일', '3월 10일', '3월 11일', '3월 12일', '3월 13일', '3월 14일'],
