--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -168,6 +168,8 @@
 
     const inquiryList = [[${inquiryList}]];
     const nodeInquiryList = [[${nodeInquiryList}]];
+    console.log(inquiryList);
+    console.log(nodeInquiryList)
 
     new Chart(ctx1, {
         type: 'line',
