--- a/src/main/resources/templates/line/line-manage.html
+++ b/src/main/resources/templates/line/line-manage.html
@@ -60,7 +60,7 @@
                                 <div class="row">
                                     <div class="col-2 fs-1 ms-3 ps-2 me-0 pe-0 rounded" style="background-color: rgb(110, 231, 183);"><i class="fa-regular fa-message" style="color:white"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        <span class="fs-1" th:text="|${lineCnt}| "></span><span class="fs-4" style="color:rgb(203, 213, 225)">경로</span>
+                                        <span class="fs-1" th:text="|${lineCnt}| "></span><span class="fs-4" style="color:rgb(203, 213, 225)">건</span>
                                     </div>
                                 </div>
                             </div>
