--- a/src/main/resources/templates/main/log-in.html
+++ b/src/main/resources/templates/main/log-in.html
@@ -14,6 +14,7 @@
             width : 28%;
         }
     </style>
+    <link rel="icon" href="/image/favicon.ico">
 </head>
 <body>
 <div class="container-fluid">
