유저 대시보드 테스트 - 수정3

--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -178,8 +178,8 @@
 </script>
 <script th:inline="javascript">
 
-    let userSignUpCount = [[${userSignUpCount}]];
-    let userLoginCnt = [[${userLoginCnt}]];
+    let userSignUpCount = [[${signUpCount}]];
+    let userLoginCnt = [[${loginCount}]];
     console.log(userSignUpCount);
     console.log(userLoginCnt);
     const ctx1 = document.getElementById('myChart1');
