뷰 타이틀 지정

--- a/src/main/resources/templates/inquiry/inquiry-detail.html
+++ b/src/main/resources/templates/inquiry/inquiry-detail.html
@@ -3,7 +3,7 @@
 <head th:replace="~{/fragment :: head}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>건물 추가</title>
+    <title>문의 답변하기</title>
 </head>
 <body>
 <div class="container-fluid">
