--- a/src/main/resources/templates/test/pathTestResult.html
+++ b/src/main/resources/templates/test/pathTestResult.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head th:replace="~{/fragment :: head}">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>경로 테스트 결과</title>
 </head>
 <body>
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcwEaZi-gI454I_SqL0EwZuZXtOS0ryLU&callback=initMap&libraries=maps,marker&v=beta"></script>
