--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -3,7 +3,7 @@
 <head th:replace="~{/fragment :: head}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>사용자 관리</title>
 </head>
 <body>
 <div class="container-fluid">
@@ -180,8 +180,6 @@
 
     let userSignUpCount = [[${signUpCount}]];
     let userLoginCnt = [[${loginCount}]];
-    console.log(userSignUpCount);
-    console.log(userLoginCnt);
     const ctx1 = document.getElementById('myChart1');
 
     new Chart(ctx1, {
