--- a/src/main/resources/templates/ai/ai-add.html
+++ b/src/main/resources/templates/ai/ai-add.html
@@ -3,7 +3,7 @@
 <head th:replace="~{/fragment :: head}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GachProject</title>
+    <title>AI 재학습</title>
 </head>
 <body>
 <div class="container-fluid">
