--- a/src/main/resources/templates/inquiry/inquiry-required.html
+++ b/src/main/resources/templates/inquiry/inquiry-required.html
@@ -3,7 +3,7 @@
 <head th:replace="~{/fragment :: head}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>문의 관리</title>
+    <title>미답변 문의 관리</title>
 </head>
 <body>
 <div class="container-fluid">
