--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:fragment="head">
+<head th:fragment="head(title)">
     <meta charset="UTF-8">
 
     <!-- CSS -->
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/9e964f10e2.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <title>Title</title>
+    <title th:text="${title}">Title</title>
 </head>
 <body>
     <div th:fragment="sidebar(param1)" class="col-2 mt-4 text-center" style="width:15%; position:fixed; z-index:1000;" id="sideBar" onmouseleave="check()">
