--- a/src/main/resources/templates/inquiry/inquiry-required.html
+++ b/src/main/resources/templates/inquiry/inquiry-required.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:replace="~{/fragment :: head}">
+<head th:replace="~{/fragment :: head('미답변 문의 관리')}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>미답변 문의 관리</title>
