--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:replace="~{/fragment :: head}">
+<head th:replace="~{/fragment :: head('대시보드')}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>대시보드</title>
