--- a/src/main/resources/templates/node/node-detail.html
+++ b/src/main/resources/templates/node/node-detail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:replace="~{/fragment :: head}">
+<head th:replace="~{/fragment :: head('지점 세부 정보')}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>지점 세부 정보</title>
