--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/fragment :: head}">
+<head th:replace="~{/fragment :: head('지점 관리')}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>지점 관리</title>
