--- a/src/main/resources/templates/test/pathTestResult.html
+++ b/src/main/resources/templates/test/pathTestResult.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:replace="~{/fragment :: head}">
+<head th:replace="~{/fragment :: head('경로 테스트 결과')}">
     <meta charset="UTF-8">
     <title>경로 테스트 결과</title>
 </head>
