계정 탈퇴자 수 조정

--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -69,12 +69,12 @@
                         </div>
                         <div class="row w-75">
                             <div class="shadow p-3 mt-1 text-start rounded" style="background-color: white;">
-                                <p class="fs-4 nodeHeader">계정 탈퇴자 수</p>
+                                <p class="fs-4 nodeHeader">일주일 간 계정 탈퇴자 수</p>
                                 <hr>
                                 <div class="row">
                                     <div class="col-2 fs-1 ms-3 ps-3 me-0 pe-0 rounded" style="background-color: rgb(110, 231, 183);"><i class="fa-solid fa-percent" style="color : white;"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        <span th:text="${userDeleteCnt}">45</span><span class="fs-4" style="color:rgb(203, 213, 225)">명</span>
+                                        <span th:text="${deleteUserCount}">45</span><span class="fs-4" style="color:rgb(203, 213, 225)">명</span>
                                     </div>
                                 </div>
                             </div>
