메인 대시보드 수정 - 2

--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -319,7 +319,7 @@
         }
     });
 
-    let map2 = [[${inquiryList}]]
+    let map2 = [[${inquiryList}]];
 
     const ctx4 = document.getElementById('myChart4');
 
