--- a/src/main/resources/templates/line/line-manage.html
+++ b/src/main/resources/templates/line/line-manage.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="row w-75">
                             <div class="shadow p-3 mt-1 text-start rounded" style="background-color: white;">
-                                <p class="fs-4 nodeHeader">일주일 간 요청된 경로 수</p>
+                                <p class="fs-4 nodeHeader">일주일 간 경로 요청 수</p>
                                 <hr>
                                 <div class="row">
                                     <div class="col-2 fs-1 ms-3 ps-2 me-0 pe-0 rounded" style="background-color: rgb(110, 231, 183);"><i class="fa-regular fa-message" style="color:white"></i></div>
