--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -117,7 +117,7 @@
                                 <div class="shadow p-3 rounded border-bottom border-4 border-success-subtle">
                                     <div class="row">
                                         <div class="col">
-                                            <div class="card-title fs-5 noto-sans-100">일일 접속자 수</div>
+                                            <div class="card-title fs-5 noto-sans-100">일일 접속 요청 수</div>
                                             <div>
                                                 <span class="card-text noto-sans-400 fs-3"><span th:text="${loginRequest}">2320</span>명</span>
                                             </div>
