로그인뷰 수정

--- a/src/main/resources/templates/main/log-in.html
+++ b/src/main/resources/templates/main/log-in.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="width : 50%">
         <div class="col-4 offset-4 text-center mt-5 pt-5">
             <div class="card text-center p-5 border border-0 shadow-lg bg-body-tertiary rounded">
                 <div class="row">
