--- a/src/main/resources/templates/main/log-in.html
+++ b/src/main/resources/templates/main/log-in.html
@@ -26,8 +26,8 @@
         </div>
     </div>
 
-    <div class="row" style="width : 50%">
-        <div class="col-4 offset-4 text-center mt-5 pt-5">
+    <div class="row justify-content-center text-center">
+        <div class="col-6 text-center mt-5 pt-5">
             <div class="card text-center p-5 border border-0 shadow-lg bg-body-tertiary rounded">
                 <div class="row">
                     <div class="col text-center">
@@ -58,11 +58,11 @@
                     </div>
                 </div>
                 <hr>
-                <div class="row" style="opacity: 40%;">
-                    <div class="col-2 mt-3">
+                <div class="row justify-content-between" style="opacity: 40%;">
+                    <div class="col-3 mt-3">
                         <img src="/image/gachon_symbolmark.png" class="img-fluid">
                     </div>
-                    <div class="col-8 p-0 ms-5">
+                    <div class="col-6 p-0">
                         <table class="table table-borderless ms-5 ps-3">
                             <tr class="p-0">
                                 <td class="p-0 text-end">종합프로젝트&nbsp; : </td>
