로그인뷰 최종 수정

--- a/src/main/resources/templates/main/log-in.html
+++ b/src/main/resources/templates/main/log-in.html
@@ -60,9 +60,9 @@
                 <hr>
                 <div class="row justify-content-between" style="opacity: 40%;">
                     <div class="col-3 mt-3">
-                        <img src="/image/gachon_symbolmark.png" class="img-fluid">
+                        <img src="/image/gachon_symbolmark.png" class="img-fluid" style="width:15%">
                     </div>
-                    <div class="col-6 p-0">
+                    <div class="col-6 p-0 align-self-center">
                         <table class="table table-borderless ms-5 ps-3">
                             <tr class="p-0">
                                 <td class="p-0 text-end">종합프로젝트&nbsp; : </td>
