--- a/src/main/resources/templates/main/log-in.html
+++ b/src/main/resources/templates/main/log-in.html
@@ -36,13 +36,13 @@
                 </div>
                 <div class="row mt-5">
                     <form id="login-form" action="/login-process" method="post">
-                        <div class="col">
+                        <div class="col-6">
                             <div class="form-floating mb-1">
-                                <input type="text" class="form-control" id="floatingInput" name="adminId" placeholder="name@example.com">
+                                <input type="text" class="form-control" id="floatingInput" name="adminId">
                                 <label for="floatingInput">아이디</label>
                             </div>
                             <div class="form-floating mt-2 mb-1">
-                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="adminPassword">
+                                <input type="password" class="form-control" id="floatingPassword" name="adminPassword">
                                 <label for="floatingPassword">비밀번호</label>
                             </div>
                         </div>
@@ -60,9 +60,9 @@
                 <hr>
                 <div class="row justify-content-between" style="opacity: 40%;">
                     <div class="col-3 mt-3">
-                        <img src="/image/gachon_symbolmark.png" class="img-fluid" style="width:15%">
+                        <img src="/image/gachon_symbolmark.png" class="img-fluid" style="width:65%">
                     </div>
-                    <div class="col-6 p-0 align-self-center">
+                    <div class="col-6 p-0 mt-4 align-self-center">
                         <table class="table table-borderless ms-5 ps-3">
                             <tr class="p-0">
                                 <td class="p-0 text-end">종합프로젝트&nbsp; : </td>
