--- a/src/main/resources/templates/main/log-in.html
+++ b/src/main/resources/templates/main/log-in.html
@@ -62,7 +62,7 @@
                     <div class="col-3 mt-3">
                         <img src="/image/gachon_symbolmark.png" class="img-fluid" style="width:65%">
                     </div>
-                    <div class="col-6 p-0 mt-4 align-self-center">
+                    <div class="col p-0 mt-4 align-self-center">
                         <table class="table table-borderless ms-5 ps-3">
                             <tr class="p-0">
                                 <td class="p-0 text-end">종합프로젝트&nbsp; : </td>
