--- a/src/main/resources/templates/main/log-in.html
+++ b/src/main/resources/templates/main/log-in.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="row mt-5">
                     <form id="login-form" action="/login-process" method="post">
-                        <div class="col-6">
+                        <div class="col-6 offset-3">
                             <div class="form-floating mb-1">
                                 <input type="text" class="form-control" id="floatingInput" name="adminId">
                                 <label for="floatingInput">아이디</label>
