AI 파이썬 파일 수정

--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -54,7 +54,7 @@
                                 </td>
                                 <td th:text="${ai.getAiModelName()}">초기 모델</td>
                                 <td th:text="${ai.getMae()}">15%</td>
-                                <td th:text="${ai.getAverSatis()}">3.2</td>
+                                <td th:text="${ai.getCnt()}">3.2</td>
                                 <td>
                                     <div class="row justify-content-center">
                                         <div class="col-4">
