--- a/src/main/resources/templates/ai/ai-add.html
+++ b/src/main/resources/templates/ai/ai-add.html
@@ -171,7 +171,7 @@
                 document.getElementById("comment").style.display = 'none';
                 document.getElementById("doModelButton").innerText = "학습 완료";
 
-                myModal.show(myModal);
+                window.location.href = "http://ceprj.gachon.ac.kr:60002/admin/ai";
             })
             .catch(error => {
                 console.error('Error fetching data:', error);
